--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KeyCodeEvent</title>
-    <link type='text/css' href="../styles/styles.css" rel="stylesheet">
+    <link type='text/css' href="styles/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         </div>
 
     </section>
-    <script src="../scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
