--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section>
-        <h2>Press a Key in your Keyboard</h2>
+        <h2>Press a Key</h2>
         <div class="container">
             <div class="tittle-container">
                 <div class="title">
